# cmake_example

./: .gitignore  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  RayMathConfig.cmake.in
.github/workflows/: ccpp.yml
cmake/: CPackProcess.cmake  DoxygenProcess.cmake  GtestProcess.cmake  InstallProcess.cmake  uninstall.cmake.in
doc/: CMakeLists.txt  Doxyfile.in  main_page.md
example/: CMakeLists.txt
example/example_calculator/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt
include/ray/math/calculator/: calculator.h
include/ray/math/core/: add.h  divide.h  minus.h  multiply.h
src/: CMakeLists.txt
src/calculator/: CMakeLists.txt  calculator.cpp
src/core/: add.cpp  divide.cpp  minus.cpp  multiply.cpp
test/: CMakeLists.txt
test/test_external_build/: CMakeLists.txt
test/test_external_build/test_external_build/: CMakeLists.txt  main.cpp
test/test_math/: CMakeLists.txt  test_math.cpp
test/test_math/calculator/: test_calculator.h
test/test_math/core/: test_add.h
tool/: CMakeLists.txt
tool/tool_calculator/: CMakeLists.txt  main.cpp
